<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingStart="16dp"
    android:gravity="start"
    android:paddingTop="10dp"
    android:paddingEnd="16dp"
    android:focusable="false"
    android:paddingBottom="10dp"
    tools:ignore="MissingDefaultResource">


    <ImageView
        android:id="@+id/url"
        android:layout_width="90dp"
        android:layout_height="140dp"
        android:background="@color/black"
        android:contentDescription="@string/label_description"
        tools:srcCompact="@drawable/abc_vector_test" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"  >

        <TextView
            android:id="@+id/title"
            android:text="@string/label_title"
            android:fontFamily="@font/montserrat_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:gravity="center"
            android:textColor="@color/cardview_dark_background"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/BookEditorial"
            android:text="@string/label_publishingHouse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:gravity="left"
            android:textColor="@color/cardview_dark_background"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/BookAuthor"
            android:text="@string/label_BookAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="left"
            android:textColor="@color/cardview_dark_background"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/BookPages"
            android:text="@string/label_pages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="left"
            android:textColor="@color/cardview_dark_background"
            android:textSize="15sp" />


    </LinearLayout>

    <ImageView
        android:id="@+id/BestSeller"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/label_description"
        android:gravity="right"
        android:visibility="visible" />

</LinearLayout>
